# dotdeploy-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  commit_messages.md  compile_db.sqlite  conventions.org  example_dod_config.toml  example_module_config.toml  todo.org
.github/workflows/: release.yml  rust.yml
db/: 00_init.sql
modules/test1/: config.toml
modules/test2/: bla.sh  config.toml  test_foo.sh
modules/test3/: bla.sh  config.toml
modules/test3/dot-foo-dir/: dot-foo-dir1.txt
src/: cache.rs  cli.rs  cmds.rs  common.rs  config.rs  deploy.rs  errors.rs  generate.rs  handlebars_helper.rs  logs.rs  main.rs  modules.rs  packages.rs  phases.rs  phases2.rs  read_module.rs  remove.rs  store.rs  sudo.rs  tests.rs  utils.rs
src/cmds/: common.rs  deploy.rs  lookup.rs  remove.rs  sync.rs  update.rs  validate.rs
src/modules/: config.rs  files.rs  generate.rs  generate_file.rs  messages.rs  packages.rs  queue.rs  tasks.rs
src/modules_old/: actions.rs  bla.el  conditional.rs  config.rs  files.rs  generate.rs  messages.rs  queue.rs
src/phases/: destination.rs  file.rs  file_operations.rs  task.rs
src/store/: backups.rs  checksums.rs  db.rs  errors.rs  files.rs  init.rs  modules.rs  sqlite.rs  sqlite_backups.rs  sqlite_checksums.rs  sqlite_files.rs  sqlite_modules.rs  tests.rs
src/utils/: commands.rs  common.rs  file_checksum.rs  file_fs.rs  file_metadata.rs  file_permissions.rs  sudo.rs
