[package]
name = "dotdeploy"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26" , features = ["derive", "env"] }
handlebars = "6.3.0"
lazy_static = "1.5.0"
log = "0.4.25"
nix = { version = "0.29.0", features = ["user", "hostname"] }
num_cpus = "1.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
shellexpand = {version = "3.1.0", features = ["full"]}
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
tempfile = "3.15.0"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
which = "6.0.3"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
