[package]
name = "dotdeploy"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.26" , features = ["derive", "env"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
handlebars = "6.3.0"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["user", "hostname"] }
num_cpus = "1.16.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
shellexpand = {version = "3.1.0", features = ["full"]}
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
which = "6.0.3"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
